Update the list of contributors

--- a/NEWS
+++ b/NEWS
@@ -48,8 +48,9 @@ Contributions from:
 
 Timm Bäder, Martin Blanchard, Mario Blättermann, Ell, Piotr Drąg, 
 Michael Henning, Øyvind Kolås, Hartmut Kuhse, Michael Natterer, 
-Nils Philippsen, Debarshi Ray, Kristian Rietveld, Dimitris Spingos, 
-Martin Srebotnjak, Pino Toscano, Cédric Valmary, Jan Vesely
+Nils Philippsen, Alexandre Prokoudine, Debarshi Ray, Kristian Rietveld, 
+Dimitris Spingos, Martin Srebotnjak, Pino Toscano, Cédric Valmary, 
+Jan Vesely
 
 
 Changes in GEGL 0.3.6
