--- a/po/pl.po
+++ b/po/pl.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gegl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-02 13:17+0200\n"
-"PO-Revision-Date: 2016-10-02 13:18+0200\n"
+"POT-Creation-Date: 2016-11-13 14:17+0100\n"
+"PO-Revision-Date: 2016-11-13 14:18+0100\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -1207,6 +1207,124 @@ msgstr "Kolor na alfę"
 msgid "Convert a specified color to transparency, works best with white."
 msgstr "Konwertuj podany kolor do przezroczystości. Najlepiej działa z bielą."
 
+#: ../operations/common/color-warp.c:24
+msgid "From 0"
+msgstr "Od 0"
+
+#: ../operations/common/color-warp.c:25
+msgid "To 0"
+msgstr "Do 0"
+
+#: ../operations/common/color-warp.c:26
+msgid "weight 0"
+msgstr "waga 0"
+
+#: ../operations/common/color-warp.c:28
+msgid "From 1"
+msgstr "Od 1"
+
+#: ../operations/common/color-warp.c:29
+msgid "To 1"
+msgstr "Do 1"
+
+#: ../operations/common/color-warp.c:30
+msgid "weight 1"
+msgstr "waga 1"
+
+#: ../operations/common/color-warp.c:32
+msgid "From 2"
+msgstr "Od 2"
+
+#: ../operations/common/color-warp.c:33
+msgid "To 2"
+msgstr "Do 2"
+
+#: ../operations/common/color-warp.c:34
+msgid "weight 2"
+msgstr "waga 2"
+
+#: ../operations/common/color-warp.c:36
+msgid "From 3"
+msgstr "Od 3"
+
+#: ../operations/common/color-warp.c:37
+msgid "To 3"
+msgstr "Do 3"
+
+#: ../operations/common/color-warp.c:38
+msgid "weight 3"
+msgstr "waga 3"
+
+#: ../operations/common/color-warp.c:40
+msgid "From 4"
+msgstr "Od 4"
+
+#: ../operations/common/color-warp.c:41
+msgid "To 4"
+msgstr "Do 4"
+
+#: ../operations/common/color-warp.c:42
+msgid "weight 4"
+msgstr "waga 4"
+
+#: ../operations/common/color-warp.c:44
+msgid "From 5"
+msgstr "Od 5"
+
+#: ../operations/common/color-warp.c:45
+msgid "To 5"
+msgstr "Do 5"
+
+#: ../operations/common/color-warp.c:46
+msgid "weight 5"
+msgstr "waga 5"
+
+#: ../operations/common/color-warp.c:48
+msgid "From 6"
+msgstr "Od 6"
+
+#: ../operations/common/color-warp.c:49
+msgid "To 6"
+msgstr "Do 6"
+
+#: ../operations/common/color-warp.c:50
+msgid "weight 6"
+msgstr "waga 6"
+
+#: ../operations/common/color-warp.c:52
+msgid "From 7"
+msgstr "Od 7"
+
+#: ../operations/common/color-warp.c:53
+msgid "To 7"
+msgstr "Do 7"
+
+#: ../operations/common/color-warp.c:54
+msgid "weight 7"
+msgstr "waga 7"
+
+#: ../operations/common/color-warp.c:56
+msgid "global weight scale"
+msgstr "globalna skala wagi"
+
+#: ../operations/common/color-warp.c:58
+msgid "amount"
+msgstr "ilość"
+
+#: ../operations/common/color-warp.c:299
+msgid "Color warp"
+msgstr "Deformacja kolorów"
+
+#: ../operations/common/color-warp.c:301
+msgid ""
+"Warps the colors of an image between colors with weighted distortion "
+"factors, color pairs which are black to black get ignored when constructing "
+"the mapping."
+msgstr ""
+"Deformuje kolory obrazu między kolorami za pomocą ważonych współczynników "
+"zniekształcania. Pary kolorów czarny do czarnego są ignorowane podczas "
+"konstruowania mapowania."
+
 #: ../operations/common/contrast-curve.c:25
 msgid "Sample points"
 msgstr "Punkty próbek"
@@ -1610,7 +1728,7 @@ msgid "Mode of displacement"
 msgstr "Tryb przesunięcia"
 
 #: ../operations/common/displace.c:37 ../operations/external/npd.c:47
-#: ../operations/transform/transform-core.c:193
+#: ../operations/transform/transform-core.c:194
 #: ../operations/workshop/ditto.c:27
 msgid "Sampler"
 msgstr "Próbka"
@@ -3842,6 +3960,38 @@ msgid "stretch components of pixels individually based on luminance envelopes"
 msgstr ""
 "rozciągnij oddzielnie składowe pikseli na podstawie obwiedni luminancji"
 
+#: ../operations/common/rgb-clip.c:25 ../operations/common/rgb-clip.c:26
+msgid "Clip low pixel values"
+msgstr "Obcinanie niskich wartości pikseli"
+
+#: ../operations/common/rgb-clip.c:28
+msgid "Low limit"
+msgstr "Niskie ograniczenie"
+
+#: ../operations/common/rgb-clip.c:31
+msgid "Pixels values lower than this limit will be set to it"
+msgstr "Wartości pikseli niższe niż ta wartość będą na nią ustawiane"
+
+#: ../operations/common/rgb-clip.c:33 ../operations/common/rgb-clip.c:34
+msgid "Clip high pixel values"
+msgstr "Obcinanie wysokich wartości pikseli"
+
+#: ../operations/common/rgb-clip.c:36
+msgid "High limit"
+msgstr "Wysokie ograniczenie"
+
+#: ../operations/common/rgb-clip.c:39
+msgid "Pixels values higher than this limit will be set to it"
+msgstr "Wartości pikseli wyższe niż ta wartość będą na nią ustawiane"
+
+#: ../operations/common/rgb-clip.c:185
+msgid "Clip RGB"
+msgstr "Obcinanie RGB"
+
+#: ../operations/common/rgb-clip.c:187
+msgid "Keep RGB pixels values inside a specific range"
+msgstr "Utrzymywanie wartości pikseli RGB w podanym zakresie"
+
 #: ../operations/common/ripple.c:29
 msgid "Sawtooth"
 msgstr "Ząbkowatość"
@@ -4373,7 +4523,6 @@ msgid "More transparent"
 msgstr "Bardziej przezroczyste"
 
 #: ../operations/common/value-propagate.c:38
-#: ../operations/workshop/ink-simulator.c:45
 msgid "Mode"
 msgstr "Tryb"
 
@@ -5404,7 +5553,7 @@ msgstr "Model zachowywania"
 msgid "When TRUE the model will not be freed"
 msgstr "Kiedy wynosi „true”, to model nie będzie zwalniany"
 
-#: ../operations/external/npd.c:50 ../operations/transform/transform-core.c:194
+#: ../operations/external/npd.c:50 ../operations/transform/transform-core.c:195
 #: ../operations/workshop/ditto.c:29
 msgid "Sampler used internally"
 msgstr "Wewnętrznie używana próbka"
@@ -6183,21 +6332,30 @@ msgstr "Ciąg przekształcenia"
 msgid "Transforms the group (used by svg)."
 msgstr "Przekształca grupę (używane przez pliki SVG)."
 
-#: ../operations/transform/transform-core.c:177
+#: ../operations/transform/transform-core.c:178
 msgid "Origin-x"
 msgstr "Początek układu współrzędnych na osi X"
 
-#: ../operations/transform/transform-core.c:178
+#: ../operations/transform/transform-core.c:179
 msgid "X coordinate of origin"
 msgstr "Współrzędna początku układu współrzędnych na osi X"
 
-#: ../operations/transform/transform-core.c:185
+#: ../operations/transform/transform-core.c:186
 msgid "Origin-y"
 msgstr "Początek układu współrzędnych na osi Y"
 
-#: ../operations/transform/transform-core.c:186
+#: ../operations/transform/transform-core.c:187
 msgid "Y coordinate of origin"
 msgstr "Współrzędna początku układu współrzędnych na osi Y"
+
+#: ../operations/transform/transform-core.c:202
+msgid "Clip to input"
+msgstr "Kadrowanie do wejścia"
+
+#: ../operations/transform/transform-core.c:203
+msgid "Force output bounding box to be input bounding box."
+msgstr ""
+"Wymuszenie, aby wyjściowa bryła brzegowej była też wejściową bryłą brzegową."
 
 #: ../operations/transform/translate.c:26
 msgid "Horizontal translation"
@@ -6214,121 +6372,6 @@ msgid ""
 msgstr ""
 "Zmienia położenie bufora (o precyzji podpikselowej), jeśli podano "
 "współrzędne całkowite, to używana jest szybka ścieżka bez resamplingu"
-
-#: ../operations/workshop/color-warp.c:24
-msgid "From 0"
-msgstr "Od 0"
-
-#: ../operations/workshop/color-warp.c:25
-msgid "To 0"
-msgstr "Do 0"
-
-#: ../operations/workshop/color-warp.c:26
-msgid "weight 0"
-msgstr "waga 0"
-
-#: ../operations/workshop/color-warp.c:28
-msgid "From 1"
-msgstr "Od 1"
-
-#: ../operations/workshop/color-warp.c:29
-msgid "To 1"
-msgstr "Do 1"
-
-#: ../operations/workshop/color-warp.c:30
-msgid "weight 1"
-msgstr "waga 1"
-
-#: ../operations/workshop/color-warp.c:32
-msgid "From 2"
-msgstr "Od 2"
-
-#: ../operations/workshop/color-warp.c:33
-msgid "To 2"
-msgstr "Do 2"
-
-#: ../operations/workshop/color-warp.c:34
-msgid "weight 2"
-msgstr "waga 2"
-
-#: ../operations/workshop/color-warp.c:36
-msgid "From 3"
-msgstr "Od 3"
-
-#: ../operations/workshop/color-warp.c:37
-msgid "To 3"
-msgstr "Do 3"
-
-#: ../operations/workshop/color-warp.c:38
-msgid "weight 3"
-msgstr "waga 3"
-
-#: ../operations/workshop/color-warp.c:40
-msgid "From 4"
-msgstr "Od 4"
-
-#: ../operations/workshop/color-warp.c:41
-msgid "To 4"
-msgstr "Do 4"
-
-#: ../operations/workshop/color-warp.c:42
-msgid "weight 4"
-msgstr "waga 4"
-
-#: ../operations/workshop/color-warp.c:44
-msgid "From 5"
-msgstr "Od 5"
-
-#: ../operations/workshop/color-warp.c:45
-msgid "To 5"
-msgstr "Do 5"
-
-#: ../operations/workshop/color-warp.c:46
-msgid "weight 5"
-msgstr "waga 5"
-
-#: ../operations/workshop/color-warp.c:48
-msgid "From 6"
-msgstr "Od 6"
-
-#: ../operations/workshop/color-warp.c:49
-msgid "To 6"
-msgstr "Do 6"
-
-#: ../operations/workshop/color-warp.c:50
-msgid "weight 6"
-msgstr "waga 6"
-
-#: ../operations/workshop/color-warp.c:52
-msgid "From 7"
-msgstr "Od 7"
-
-#: ../operations/workshop/color-warp.c:53
-msgid "To 7"
-msgstr "Do 7"
-
-#: ../operations/workshop/color-warp.c:54
-msgid "weight 7"
-msgstr "waga 7"
-
-#: ../operations/workshop/color-warp.c:56
-msgid "global weight scale"
-msgstr "globalna skala wagi"
-
-#: ../operations/workshop/color-warp.c:58
-msgid "amount"
-msgstr "ilość"
-
-#: ../operations/workshop/color-warp.c:299
-msgid "Color warp"
-msgstr "Deformacja kolorów"
-
-#: ../operations/workshop/color-warp.c:301
-msgid ""
-"Warps the colors of an image between colors with weighted distortion factors."
-msgstr ""
-"Deformuje kolory obrazu między kolorami za pomocą ważonych współczynników "
-"zniekształcania."
 
 #: ../operations/workshop/component-extract.c:25
 msgid "RGB Red"
@@ -6792,95 +6835,6 @@ msgstr ""
 "Poziomo składa wejścia na stos (w „output” „aux” jest umieszczane po prawej "
 "od „input”)"
 
-#: ../operations/workshop/ink-simulator.c:36
-msgid "Proof"
-msgstr "Dowód"
-
-#: ../operations/workshop/ink-simulator.c:37
-msgid "Separate"
-msgstr "Oddzielne"
-
-#: ../operations/workshop/ink-simulator.c:38
-msgid "Separate and proof"
-msgstr "Dowód i oddzielne"
-
-#: ../operations/workshop/ink-simulator.c:41
-msgid "Ink configuration"
-msgstr "Konfiguracja tuszu"
-
-#: ../operations/workshop/ink-simulator.c:42
-msgid "Textual desciption of inks used for simulated print-job"
-msgstr "Tekstowy opis tuszów używanych do symulowania drukowania"
-
-#: ../operations/workshop/ink-simulator.c:47
-msgid "how the ink simulator is used"
-msgstr "sposób użycia symulatora tuszu"
-
-#: ../operations/workshop/ink-simulator.c:51
-msgid "Substrate color"
-msgstr "Kolor podłoża"
-
-#: ../operations/workshop/ink-simulator.c:51
-msgid "paper/fabric/material color"
-msgstr "kolor papieru/tkaniny/materiału"
-
-#: ../operations/workshop/ink-simulator.c:52
-msgid "Ink1 color"
-msgstr "Kolor 1. tuszu"
-
-#: ../operations/workshop/ink-simulator.c:52
-#: ../operations/workshop/ink-simulator.c:53
-#: ../operations/workshop/ink-simulator.c:54
-#: ../operations/workshop/ink-simulator.c:55
-#: ../operations/workshop/ink-simulator.c:56
-msgid "ink color"
-msgstr "kolor tuszu"
-
-#: ../operations/workshop/ink-simulator.c:53
-msgid "Ink2 color"
-msgstr "Kolor 2. tuszu"
-
-#: ../operations/workshop/ink-simulator.c:54
-msgid "Ink3 color"
-msgstr "Kolor 3. tuszu"
-
-#: ../operations/workshop/ink-simulator.c:55
-msgid "Ink4 color"
-msgstr "Kolor 4. tuszu"
-
-#: ../operations/workshop/ink-simulator.c:56
-msgid "Ink5 color"
-msgstr "Kolor 5. tuszu"
-
-#: ../operations/workshop/ink-simulator.c:58
-msgid "Ink limit"
-msgstr "Ograniczenie tuszu"
-
-#: ../operations/workshop/ink-simulator.c:59
-#, c-format
-msgid "maximum amount of ink for one pixel, 2.5 = 250%% coverage"
-msgstr "maksymalna ilość tuszu na jeden piksel, 2,5 = 250%% pokrycia"
-
-#: ../operations/workshop/ink-simulator.c:63
-msgid "Debug width"
-msgstr "Szerokość debugowania"
-
-#: ../operations/workshop/ink-simulator.c:65
-msgid "how wide peel off bands for ink order vis"
-msgstr "szerokość pasków oderwania dla kolejności tuszu"
-
-#: ../operations/workshop/ink-simulator.c:1422
-msgid "Ink Simulator"
-msgstr "Symulator tuszu"
-
-#: ../operations/workshop/ink-simulator.c:1425
-msgid ""
-"Spectral ink and paint simulator, for softproofing/simulating physical color "
-"mixing and interactions."
-msgstr ""
-"Spektralny symulator tuszu i farby dla softproofingu/symulowania fizycznego "
-"mieszania i oddziaływania kolorów."
-
 #: ../operations/workshop/kuwahara.c:27 ../operations/workshop/median-blur.c:28
 msgid "Radius of square pixel region (width and height will be radius*2+1)"
 msgstr ""
@@ -6933,38 +6887,6 @@ msgstr ""
 "zostanie to użyte zamiast zwykłego wczytywania plików za pomocą dcraw, jeśli "
 "format pliku to .rawbayerS, to zwrócone liczby 16-bitowe zostaną wymienione "
 "(wczytywanie plików PNM zawiera błędy)"
-
-#: ../operations/workshop/rgb-clip.c:25 ../operations/workshop/rgb-clip.c:26
-msgid "Clip low pixel values"
-msgstr "Obcinanie niskich wartości pikseli"
-
-#: ../operations/workshop/rgb-clip.c:28
-msgid "Low limit"
-msgstr "Niskie ograniczenie"
-
-#: ../operations/workshop/rgb-clip.c:31
-msgid "Pixels values lower than this limit will be set to it"
-msgstr "Wartości pikseli niższe niż ta wartość będą na nią ustawiane"
-
-#: ../operations/workshop/rgb-clip.c:33 ../operations/workshop/rgb-clip.c:34
-msgid "Clip high pixel values"
-msgstr "Obcinanie wysokich wartości pikseli"
-
-#: ../operations/workshop/rgb-clip.c:36
-msgid "High limit"
-msgstr "Wysokie ograniczenie"
-
-#: ../operations/workshop/rgb-clip.c:39
-msgid "Pixels values higher than this limit will be set to it"
-msgstr "Wartości pikseli wyższe niż ta wartość będą na nią ustawiane"
-
-#: ../operations/workshop/rgb-clip.c:185
-msgid "Clip RGB"
-msgstr "Obcinanie RGB"
-
-#: ../operations/workshop/rgb-clip.c:187
-msgid "Keep RGB pixels values inside a specific range"
-msgstr "Utrzymywanie wartości pikseli RGB w podanym zakresie"
 
 #: ../operations/workshop/vhsfix.c:262
 msgid "vhs glitch fixer"
